--- a/src/components/CentralHome/index.css
+++ b/src/components/CentralHome/index.css
@@ -1,5 +1,5 @@
 body{
-  background-color: rgb(0,0,0);
+  background: black;;
   font-family: 'Quicksand', sans-serif;
 }
 @media only screen and (max-width: 600px) {
