--- a/src/components/TopNavbar/index.css
+++ b/src/components/TopNavbar/index.css
@@ -31,23 +31,25 @@ a:hover, a:active{
 .nav-logo{
   width: 5%;
   margin-left: 3%;
+  background-color: black;
   margin-top: .5%;
 }
 .nav-img{
   width: 100%;
   height: 60px;
+  background: black;
 }
 .top-nav{
   display: flex;
+  background: black;
 }
 .nav-btn{
   background: none;
   color: seagreen;
   font-weight: 600;
   border: none;
-  padding-left: 1;
-  padding: 1%;
   border-radius: 2%;
+  padding: 1%;
   font-size: 14px;
   cursor: pointer;
   transition: .35s ease-in-out;
@@ -55,7 +57,8 @@ a:hover, a:active{
   justify-content: center
 }
 a:hover{
-  text-decoration: none;
+  text-decoration: none !important;
+  cursor: url("https://i.ibb.co/6vPZS9j/iconsham.png"), default !important;;
 }
 
 #special-char{
@@ -66,6 +69,7 @@ a:hover{
 .nav-btn:hover{
   color: #ffffff;
   border: 1px solid seagreen;
+  cursor: url("https://i.ibb.co/6vPZS9j/iconsham.png"), default !important;;
 
 }
 .quicklinks{
@@ -90,6 +94,7 @@ a:hover{
   opacity: 1;
   color: #ffbf00;
   transform: scale(1.05);
+  cursor: url("https://i.ibb.co/6vPZS9j/iconsham.png"), default !important;;
 }
 
 .close-btn{
