--- a/src/components/CentralCarousel/index.css
+++ b/src/components/CentralCarousel/index.css
@@ -50,69 +50,7 @@
   width: 50%;
   text-align: left;
 }
-#sports-logo{
-  height: 135px;
-  width: auto;
-  transition: .3s ease-in-out;
-  cursor: pointer;
-  border-radius: 20%;
 
-}
-#sports-logo:hover{
-  transform: scale(1.175);
-
-}
-
-img#sports-logo:hover ~ span.team-name#cowboys{
-  color: navy
-}
-img#sports-logo:hover ~ span.team-name#lakers{
-  color: purple
-}
-img#sports-logo:hover ~ span.team-name#yankees{
-  color: navy
-}
-img#sports-logo:hover ~ span.team-name#devils{
-  color: red
-}
-img#sports-logo:hover ~ span.team-name#brooklyn{
-  color: white;
-  background: black;
-  padding: 1%;
-  border-radius: 10%;
-}
-img#sports-logo:hover ~ span.team-name#duke{
-  color: blue
-}
-img#sports-logo:hover ~ span.team-name#notre{
-  color: gold
-}
-img#sports-logo:hover ~ span.team-name#warriors{
-  color: lightblue
-}
-
-.team-name{
-  font-family: 'Satisfy', sans-serif;
-  position: relative;
-  top: 7%;
-  color: black;
-  transition: .35s ease-in-out;
-}
-.team-info{
-  display: none;
-  position: absolute;
-  border-radius: 2%;
-  border: 2px solid seagreen;
-  z-index: 101;
-  height: 125px;
-  opacity: .9;
-  width: 35%;
-  color: seagreen;
-  background: black;
-  padding: 3%;
-  margin: 21.5% 0 0 35%;
-  transition: .35s ease-in-out;
-}
 #dallas-img{
   height: 225px;
   width: 215px;
@@ -258,7 +196,7 @@ img#sports-logo:hover ~ span.team-name#warriors{
   .carousel-control-next, .carousel-control-prev{
     margin-top:75%;
   }
-  .team-sect-title,.dallas-appreciation-title{
+  .dallas-appreciation-title{
     font-size: 22px;
   }
   .Carousel{
