--- a/src/components/CentralFooter/index.css
+++ b/src/components/CentralFooter/index.css
@@ -1,6 +1,6 @@
 .title#footer{
   background-color: seagreen;
-  text-align: right;
+  text-align: center;
   font-size: 24px;
   font-weight: 500;
   padding-right: 1%;
