fixed navbar buttons

--- a/src/components/CentralBody/index.css
+++ b/src/components/CentralBody/index.css
@@ -1,6 +1,7 @@
 .bod-section{
-  height: 450px;
+  height: auto;
   display: flex;
+  padding-bottom: 5%;
 }
 .bio-line#first{
   border: 2px solid #ffffff;
