--- a/src/components/CentralCarousel/index.css
+++ b/src/components/CentralCarousel/index.css
@@ -1,8 +1,7 @@
 .carousel-section{
   background: whitesmoke;
   width: 100%;
-  overflow-x: hidden;
-
+  height: auto;
 }
 .title#highlights{
   position: absolute;
@@ -15,17 +14,11 @@
   font-size: 68px;
   text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
 }
-.project{
-  height: 400px;
+.project-container{
+  display:  flex;
 }
-.large-container{
-  display: flex;
-  padding: 2%;
-  justify-content: center;
-  height: 400px;
-}
-.c-item{
-  margin: 1%;
+.project-info{
+  height: 400px;;
 }
 .carousel-indicators li{
   background-color: seagreen !important;
@@ -44,22 +37,12 @@
 }
 
 .project-desc{
-  position: absolute;
   margin-top: 1%;
   margin-left: 10%;
   width: 50%;
   text-align: left;
 }
 
-#dallas-img{
-  height: 225px;
-  width: 215px;
-  opacity: .85;
-  margin-top: 1%;
-  transition: .35s ease-in-out;
-  cursor: crosshair;
-  border-radius: 1%;
-}
 .project-name{
   color: #e8b923;
   text-align: left;
@@ -72,49 +55,19 @@
   font-size: 42px;
   text-shadow: 1px 1px 1px black;
 }
-.dallas-appreciation-title{
-  color: #e8b923;
-  text-align: left;
-  text-shadow: ;
-  padding-top: 1%;
-  margin-top: 19%;
-  margin-left: 25%;
-  font-weight: bolder;
-  font-family: 'Bowlby One SC', cursive;
-  letter-spacing: .05em;
-  font-size: 40px;
-  text-shadow: 1px 1px 1px black;
-  position: absolute;
-}
-.team-sect-title{
-  color: #e8b923;
-  text-align: left;
-  text-shadow: ;
-  padding-top: 1%;
-  margin-top: 15.8%;
-  margin-left: 23%;
-  font-weight: bolder;
-  font-family: 'Bowlby One SC', cursive;
-  letter-spacing: .05em;
-  font-size: 40px;
-  text-shadow: 1px 1px 1px black;
-  position: absolute;
-}
+
 #project-img{
-  height: 325px;
-  width: 335px;
-  border-radius: 0%;
-  margin-left: 65%;
-  margin-top: -3.1%;
+  width: 60%;
+  height: auto;
+  margin-top: 6%;
+  margin-left: 10%;
 }
-.team-sect-title{
-  position: absolute;
+#nypd-img{
+  width: 40%;
+  height: auto;
+  margin-top: 3%;
+  margin-left: 10%;
 }
-
-#dallas-img:hover{
-  opacity: 1;
-}
-
 @media only screen and (max-width: 850px) {
   .title#highlights {
     color: seagreen;
@@ -162,37 +115,6 @@
     margin-top: 10%;
     margin-left: 65%;
   }
-  #dallas-img{
-    height: 50px;
-    width: 50px;
-    opacity: .85;
-    margin-top: 1%;
-    transition: .35s ease-in-out;
-    cursor: crosshair;
-    border-radius: 1%;
-    overflow-x: hidden;
-    transition: .45s ease-in-out;
-  }
-  .dallas-appreciation-title{
-    color: #e8b923;
-    text-align: left;
-    text-shadow: ;
-    padding-top: 1%;
-    margin-top: 19%;
-    margin-left: 2%;
-    font-weight: bolder;
-    font-family: 'Bowlby One SC', cursive;
-    letter-spacing: .05em;
-    font-size: 25px;
-    text-shadow: 1px 1px 1px black;
-    position: absolute;
-    text-align: center;
-  }
-    #dallas-img:hover,#dallas-img:active, #dallas-img:enabled {
-      transform: translateY(100%);
-      height: 140px;
-      width: 140px;
-    }
 
   .carousel-control-next, .carousel-control-prev{
     margin-top:75%;
