--- a/src/components/CentralHeader/index.css
+++ b/src/components/CentralHeader/index.css
@@ -37,32 +37,29 @@ canvas{
 .title-container{
   background-size: 100% 100%;
   background-attachment: fixed;
-  position: absolute;
-  height: 400px;
+  height: 375px;
   width: 100%;
   opacity: .64;
   background-image: url('./northern-lights.jpeg');
   clip-path: polygon(50% 0%, 100% 0, 100% 100%, 30% 90%, 0 100%, 0 0);
 }
 .title-box{
-  margin-top: 5%;
+  padding-top: 5%;
   margin-left: 16.5%;
 }
 
 
 .desc-item{
-  padding: 3%;
+  padding: 2%;
   transition: .35s ease-in-out;
   cursor: pointer;
   font-weight: 700;
   font-family: 'Open Sans Condensed', sans-serif;
-
+  margin: 3%;
   text-shadow: 0px 1px 1px transparent;
   color: white;
 }
 .desc-item#mid{
-  border-right: 1px solid white;
-  border-left: 1px solid white;
 }
 .desc-item:hover{
   color: white;
