--- a/src/components/CentralBody/index.css
+++ b/src/components/CentralBody/index.css
@@ -8,7 +8,7 @@
 .bio-line#first{
   border: 2px solid #ffffff;
   position: absolute;
-  width: 260px;
+  width: 220px;
   margin: 11% 0% 0% -1%;
   z-index: -1;
   transform: rotate(-6deg);
@@ -18,7 +18,7 @@
 .bio-line#second{
   border: 2px solid #ffffff;
   position: absolute;
-  width: 260px;
+  width: 220px;
   margin: 17% 0% 0% -1%;
   z-index: -1;
   transform: rotate(-6deg);
@@ -30,7 +30,7 @@
   width: 25%;
   border: 4px solid #e4e4e4;
   border-radius: 80%;
-  margin-left: 15%;
+  margin-left: 12%;
   margin-top: 3%;
   transition: .35s ease-in-out;
   opacity: 1;
@@ -79,19 +79,15 @@
   .bio-line {
     display: none;
   }
-  .title-container{
-    position: relative;
-    height: 250px;
-  }
   .title#header{
     font-size: 38px;
   }
   .mini-bio{
-    font-size: 13.4px;
-    margin-top: 16%;
+    font-size: 18.4px;
+    margin-top: 5%;
     padding-left: 3%;
     border-left: none;
-    width: 55%;
+    width: 90%;
     height: 183px;
     font-family: 'Open Sans Condensed', sans-serif;
 
@@ -101,8 +97,7 @@
     width: 150px;
     border: 2px solid #e4e4e4;
     border-radius: 2%;
-    margin-left: 3%;
-    margin-top: 16%;
+    margin: 4% auto;
     transition: .35s ease-in-out;
     opacity: 1;
     box-shadow: 0 11px 20px rgba(0,0,0,0.33), 0 10px 10px rgba(0,0,0,0.33);
@@ -112,6 +107,7 @@
   }
   .bod-section{
     height: 350px;
+    display: block;
   }
   .nav-btn{
     font-size: 10px;
