--- a/src/components/CentralHeader/index.css
+++ b/src/components/CentralHeader/index.css
@@ -42,7 +42,7 @@ canvas{
   height: 375px;
   width: 100%;
   opacity: .64;
-  background-image: url('./northern-lights.jpeg');
+  background-image: url('./greentri.jpg');
   clip-path: polygon(50% 0%, 100% 0, 100% 100%, 30% 90%, 0 100%, 0 0);
 }
 .title-box{
@@ -86,7 +86,7 @@ canvas{
     height: 150px;
     width: 100%;
     opacity: .64;
-    background-image: url('./northern-lights.jpeg');
+    background-image: url('./greentri.jpg');
     clip-path: polygon(50% 0%, 100% 0, 100% 100%, 30% 90%, 0 100%, 0 0);
   }
 
